--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -2,6 +2,9 @@
   <ul class="list-unstyled">
   {%- for levels in site.data.i18n.administrations -%}
     {%- assign level = levels[0] -%}
+    {%- if level == 'others' -%}
+      {%- continue -%}
+    {%- else -%}
     <li>
       <details>
         <summary>{{ site.data.i18n.administrations[level][page.lang] }}</summary>
@@ -55,6 +58,7 @@
         </div>
       </details>
     </li>
+    {%- endif -%}
     {%- endfor -%}
   </ul>
 </div>
