--- a/_includes/form/presets/partners.html
+++ b/_includes/form/presets/partners.html
@@ -2,7 +2,9 @@
 <div class="add-more-group" id="addMore{{ title }}" data-title="{{ title }}">
   {% include form/components/title.html id=include.idPreset title=title -%}
   <div class="add-more-content">
-    <div class="form-group" style="margin-bottom: 0;">{% include form/components/label.html id=include.idPreset title=title param=site.data.forms.param.required_false %}</div>
+    <div class="form-group" style="margin-bottom: 0;">
+      <label for="{{ title }}"><span class="field-name">{{ site.data.i18n.form[include.idPreset][title].label[page.lang] }}</span></label>
+    </div>
     <div class="form-group" style="display: flex;">
         <div class="{{ title }}AdminCodeSelect more-group-id-replace">{% include form/components/admin/select.html param=site.data.forms.param.required_false %}</div>
         <div class="{{ title }}AdminCodeBtn more-group-id-replace">{% include form/components/admin/btn.html btn=title idPreset=include.idPreset %}</div>
