--- a/_includes/partnershipTable.html
+++ b/_includes/partnershipTable.html
@@ -16,6 +16,25 @@
       </div>
 
       <div class="form-group">
+        <label for="dt_department">{{ site.data.i18n.tables.administrations[page.lang] }}</label>
+        <select class="form-control" id="dt_department" name="dt_department" data-column="0">
+          <option value="">&nbsp;</option>
+          {%- assign admin_arr = "" | split: ',' -%}
+          {%- for govLevels in site.data.partnership -%}
+            {%- assign govLevel = govLevels[0] -%}
+            {% for admin in govLevels[1] %}
+              {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
+              {%- assign admin_arr = admin_arr | push: administration[0].name[page.lang] -%}
+            {% endfor %}
+          {%- endfor -%}
+          {%- assign admin_arr = admin_arr | sort -%}
+          {%- for admin in admin_arr -%}
+            <option value="{{ admin }}">{{ admin }}</option>
+          {%- endfor -%}
+        </select>
+      </div>
+
+      <div class="form-group">
         <label for="dt_team">{{ site.data.i18n.tables.team[page.lang] }}</label>
         <select class="form-control" id="dt_team" name="dt_team" data-column="5">
           <option value="">&nbsp;</option>
