I removed the menu from the header
I also removed "visible-md visible-lg" from the section class name at line 8. It is now possible to change language on mobile view.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 
 <header>
   <div id="wb-bnr" class="container">
-    <section id="wb-lng" class="visible-md visible-lg text-right">
+    <section id="wb-lng" class="text-right">
       <h2 class="wb-inv">{{ site.data.i18n.general.head.languageSelection[page.lang] }}</h2>
       <div class="row">
         <div class="col-md-12">
@@ -35,14 +35,6 @@
           <span class="wb-inv"> {{ site.data.i18n.general.nav.Canada.en }} / <span lang="fr">{{ site.data.i18n.general.nav.Canada.fr }}</span></span>
         </a>
       </div>
-
-      <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
-        <h2>{{ site.data.i18n.general.head.searchAndMenus[page.lang] }}</h2>
-        <ul class="list-inline text-right chvrn">
-          <li><a href="#mb-pnl" title="{{ site.data.i18n.general.head.searchAndMenus[page.lang] }}" aria-controls="mb-pnl" class="overlay-lnk" role="button"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">{{ site.data.i18n.general.head.searchAndMenus[page.lang] }}</span></span></a></li>
-        </ul>
-        <div id="mb-pnl"></div>
-      </section>
     </div>
   </div>
 
