--- a/_includes/standardTable.html
+++ b/_includes/standardTable.html
@@ -94,15 +94,16 @@
       <h2 class="modal-title">{{ standard.name[page.lang] }}</h2>
     </header>
     <div class="modal-body">
-      <p><strong>{{ standard.description.whatItDoes[page.lang] }}</strong></p>
-      <p>{{ site.data.i18n.tables.lightbox.beingUsed[page.lang] }}</p>
+      <p><strong>Description:</strong></p>
+      <p>{{ standard.description.whatItDoes[page.lang] }}</p>
+      <p><strong>{{ site.data.i18n.tables.lightbox.beingUsed[page.lang] }}</strong></p>
       {%- for administration in standard.administrations -%}
           <div class="row">
             <div class="col-md-7">
               {%- for levels in site.data.i18n.administrations -%}
                 {%- assign govLevel = levels[0] -%}
                 {%- assign admin = site.data.administrations[govLevel] | where: "code", administration.adminCode -%}
-                <strong>{{ admin[0].name[page.lang] }}</strong>
+                {{ admin[0].name[page.lang] }}
               {%- endfor -%}
             </div>
             <div class="col-md-5">{{ administration.status }}</div>
